# SVT-AV1

./: .gitignore
cbuild/: CMakeCache.txt  Makefile  SvtAv1Enc.pc  cmake_install.cmake
cbuild/Source/App/: Makefile  cmake_install.cmake
cbuild/Source/Lib/: Makefile  cmake_install.cmake
cbuild/Source/Lib/ASM_AVX2/: Makefile  cmake_install.cmake
cbuild/Source/Lib/ASM_AVX512/: Makefile  cmake_install.cmake
cbuild/Source/Lib/ASM_SSE2/: Makefile  cmake_install.cmake
cbuild/Source/Lib/ASM_SSE4_1/: Makefile  cmake_install.cmake
cbuild/Source/Lib/ASM_SSSE3/: Makefile  cmake_install.cmake
cbuild/Source/Lib/C_DEFAULT/: Makefile  cmake_install.cmake
cbuild/Source/Lib/Codec/: EbVersion.h  Makefile  cmake_install.cmake
cbuild/Source/Lib/Globals/: Makefile  cmake_install.cmake
specs/: 00-architecture.md  01-api.md  02-motion-estimation.md  03-mode-decision.md  04-transforms.md  05-intra-prediction.md  06-inter-prediction.md  07-entropy-coding.md  08-loop-filters.md  09-rate-control.md  10-encoding-loop.md  11-picture-management.md  12-film-grain.md  13-segmentation.md  14-utilities.md  15-rtcd.md  16-data-structures.md  17-temporal-filtering.md  18-testing.md  README.md
svtav1-rs/: CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  README.md  STATUS.md  justfile
svtav1-rs/crates/svtav1-cuda/: Cargo.toml
svtav1-rs/crates/svtav1-cuda/src/: lib.rs
svtav1-rs/crates/svtav1-disjoint-mut/: Cargo.toml
svtav1-rs/crates/svtav1-disjoint-mut/src/: lib.rs
svtav1-rs/crates/svtav1-dsp/: Cargo.toml
svtav1-rs/crates/svtav1-dsp/examples/: perf_report.rs
svtav1-rs/crates/svtav1-dsp/src/: bench.rs  copy.rs  fwd_txfm.rs  hadamard.rs  inter_pred.rs  intra_pred.rs  intrabc.rs  inv_txfm.rs  lib.rs  loop_filter.rs  obmc.rs  quant.rs  sad.rs  scale.rs  superres.rs  txfm_dispatch.rs  variance.rs  warp.rs
svtav1-rs/crates/svtav1-encoder/: Cargo.toml
svtav1-rs/crates/svtav1-encoder/src/: encode_loop.rs  film_grain.rs  lib.rs  mode_decision.rs  motion_est.rs  multipass.rs  partition.rs  perceptual.rs  picture.rs  pipeline.rs  rate_control.rs  speed_config.rs  temporal_filter.rs
svtav1-rs/crates/svtav1-entropy/: Cargo.toml
svtav1-rs/crates/svtav1-entropy/src/: cdf.rs  coeff.rs  context.rs  default_coef_cdfs.rs  lib.rs  mv_coding.rs  obu.rs  range_coder.rs  tile.rs  writer.rs
svtav1-rs/crates/svtav1-tables/: Cargo.toml
svtav1-rs/crates/svtav1-tables/src/: block.rs  interp.rs  lib.rs  partition.rs  scan.rs  transform.rs
svtav1-rs/crates/svtav1-types/: Cargo.toml
svtav1-rs/crates/svtav1-types/src/: bitstream.rs  block.rs  block_mode.rs  constants.rs  frame.rs  interp.rs  lib.rs  motion.rs  partition.rs  prediction.rs  quantization.rs  reference.rs  restoration.rs  transform.rs
svtav1-rs/svtav1/: Cargo.toml
svtav1-rs/svtav1/examples/: bench_vs_c.rs
svtav1-rs/svtav1/src/: avif.rs  lib.rs
svtav1-rs/svtav1/tests/: e2e_correctness.rs  golden_parity.rs  real_encode.rs
svtav1-rs/tests/framework/: mod.rs
svtav1-rs/tools/: extract_golden.c  extract_intra_golden.c
