[package]
name = "svtav1-disjoint-mut"
version = "0.1.0"
description = "Disjoint mutable access for frame threading in SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true

[features]
default = []
unchecked = []
