[package]
name = "svtav1-encoder"
version = "0.1.0"
description = "Mode decision, rate control, encoding loop, and pipeline for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
svtav1-types = { workspace = true, features = ["std"] }
svtav1-tables = { workspace = true }
svtav1-dsp = { workspace = true, features = ["std"] }
svtav1-entropy = { workspace = true, features = ["std"] }
svtav1-disjoint-mut = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = []
unsafe_encoding = ["svtav1-dsp/unchecked_dsp", "svtav1-entropy/unchecked_entropy"]
